--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -25,5 +25,52 @@
   "statut": "Statut",
   "cancel": "Cancel",
   "services": "Services",
-  "info": "Infos"
+  "info": "Infos",
+  "Plus":"More",
+  "Moins" : "Less",
+  "category": "Categories",	
+  "categories": {
+      "Restauration": "Dining",
+      "Vie nocturne": "Nightlife",
+      "Shopping": "Shopping",
+      "Sports & Activités de loisirs": "Sports & Leisure Activities",
+      "Salons de beauté & Spas": "Beauty Salons & Spas",
+      "Automobile": "Automobile",
+      "Maisons & Travaux": "Houses & Works",
+      "Alimentations":"Power supplies",
+      "Art & Loisirs":"Art & Leisure",
+      "Santé & Médical":"Health & Medical",
+      "Services destiné aux prof":"Services for professionals",
+      "Animaux de companie":"Pets",
+      "Immobilier":"Real estate",
+      "Hôtels & Séjours":"Hotels & Stays",
+      "Services Locaux":"Local Services",
+      "Organisation d événements" : "Organization of events",
+      "Services publics & gouvernement":"Public services & government",
+      "Services financiers":"Financial Services",
+      "Formation & Enseignement":"Training & Teaching",
+      "Organisation religieuse":"Religious organization",
+      "Couleur locale":"Local color",
+      "Média":"Media",
+      "Cafés & Thés":"Coffees & Teas"
+     
+    },
+    "places": {
+      "Le Gourmet": {
+        "name": "The Gourmet",
+        "description": "Gourmet restaurant offering refined dishes.",
+        "address": "Bastos, Yaoundé",
+        "phone": "+237690111222",
+        "email": "contact@legourmet.cm",
+        "opening_hours": {
+          "monday_friday": "12h00 - 23h00",
+          "saturday": "14h00 - 00h00",
+          "sunday": "Closed"
+        },
+        "min_price": "10,000 FCFA"
+      }
+    }
+  
+  
+  
 }
