--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -69,7 +69,55 @@
         },
         "min_price": "10,000 FCFA"
       }
-    }
+    },
+    "price": "Prix",
+    "filter": "Filtres",
+    "suggested": "Suggéré",
+    "categorie": "Categorie",
+    "feature": "Caractéristiques",
+    "see":"Tout Voir",
+    "open_now": "Ouvert Maintenant",
+    "offers_delivery": "Propose la livraison",
+    "offers_takeout": "Propose à emporter",
+    "good_for_dinner": "Bon pour le dîner",
+    "outdoor_seating": "Terrasse extérieure",
+    "good_for_lunch": "Bon pour le déjeuner",
+    "burgers": "Burgers",
+    "hot_dogs": "Hot Dogs",
+    "fast_food": "Fast Food",
+    "american": "Américain",
+    "food_trucks": "Camions de nourriture",
+    "diners": "Diners",
+    "salad": "Salade",
+    "restaurants": "Restaurants",
+    "food_delivery_services": "Services de livraison de nourriture",
+    "beer_bar": "Bar à bière",
+    "vegan": "Végétalien",
+    "sandwiches": "Sandwichs",
+    "sports_bars": "Bars sportifs",
+    "food_stands": "Stands de nourriture",
+    "pubs": "Pubs",
+    "fish_and_chips": "Poisson et frites",
+    "halal": "Halal",
+    "breakfast_and_brunch": "Petit déjeuner et brunch",
+    "vegetarian": "Végétarien",
+    "pizza": "Pizza",
+    "international": "International",
+    "cocktail_bars": "Bars à cocktails",
+    "chicken_shops": "Magasins de poulet",
+    "bars": "Bars",
+    "food": "Nourriture",
+    "steakhouses": "Steakhouses",
+    "modern_european": "Européen moderne",
+    "falafel": "Falafel",
+    "good_for_kids": "Bon pour les enfants",
+    "good_for_groups": "Bon pour les groupes",
+    "dogs_allowed": "Chiens autorisés",
+    "full_bar": "Bar complet",
+    "good_for_brunch": "Bon pour le brunch",
+    "takes_reservations": "Accepte les réservations",
+    "les_meilleurs_burgers":"Les Meilleurs Burgers"
+ 
   
   
 }
