--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -2,28 +2,113 @@
   "english": "English",
   "french": "French",
   "login": "Login",
+  "register": "Register",
   "name": "Name",
   "first_name": "First Name",
   "middle_name": "Middle Name",
   "last_name": "Last Name",
-  "id": "Id",
-  "status": "status",
+  "id": "ID",
+  "status": "Status",
   "gender": "Gender",
   "birthday": "Birthday",
   "currentAge": "Current Age",
   "phone": "Phone",
   "email": "Email",
   "city": "City",
-  "zip": "Zip",
+  "zip": "Zip Code",
   "country": "Country",
   "address": "Address",
   "edit": "Edit",
-  "add_user": "Add a user",
-  "new_user": "New user",
+  "add_user": "Add User",
+  "new_user": "New User",
   "role": "Role",
   "comments": "Comments",
-  "statut": "Statut",
+  "statut": "Status",
   "cancel": "Cancel",
   "services": "Services",
-  "info": "Infos"
+  "info": "Info",
+  "navbar": {
+    "space": "Current Location",
+    "yelpProfessional": "Yelp for Professionals",
+    "writeReview": "Write a Review",
+    "startProject": "Start Project",
+    "yelpExploreBusiness": "Explore Yelp for Your Business",
+    "descriptionStartPart1": "Get in touch with the best",
+    "descriptionStartPart2": "places near you",
+    "descriptionEndPart1": "Come discover",
+    "descriptionEndPart2": "the places you want",
+    "otherCategory": "More",
+    "serviceRepaire": "Auto Service",
+    "homeAndWork": "Home and Work",
+    "restaurants": "Restaurants",
+    "restaurant": "Restaurant",
+    "delivery": "Delivery",
+    "takeAway": "Take Away",
+    "accountants": "Accountants",
+    "plumbers": "Plumbers",
+    "autoRepair": "Auto Repair",
+    "cameroon": "Cameroon",
+    "burgers": "Burgers",
+    "chineseCuisine": "Chinese Cuisine",
+    "italianCuisine": "Italian Cuisine",
+    "reservations": "Reservations",
+    "mexicanCuisine": "Mexican Cuisine",
+    "thaiCuisine": "Thai Cuisine",
+    "serviceProvider": "Service Provider",
+    "electricians": "Electricians",
+    "cleaning": "Cleaning",
+    "heating": "Heating",
+    "landscaping": "Landscaping",
+    "locksmiths": "Locksmiths",
+    "movers": "Movers",
+    "carRepair": "Car Repair",
+    "precisionCarCleaning": "Precision Car Cleaning",
+    "bodywork": "Bodywork",
+    "carCleaning": "Car Cleaning",
+    "carDealership": "Car Dealership",
+    "oilChange": "Oil Change",
+    "parking": "Parking",
+    "towing": "Towing",
+    "dryCleaning": "Dry Cleaning",
+    "phoneRepair": "Phone Repair",
+    "bars": "Bars",
+    "nightlife": "Nightlife",
+    "hairdressersHairSalons": "Hairdressers & Hair Salons",
+    "gym": "Gym",
+    "massage": "Massage",
+    "shopping": "Shopping",
+    "addABusiness": "Add a Business",
+    "claimYourBusiness": "Claim Your Business",
+    "loginInToBusiness": "Login to Your Business"
+  },
+  "home": {
+    "descriptionHomePart1": "Discover great deals and have fun effortlessly.",
+    "descriptionHomePart2": "Whether you are traveling alone, with family, friends, or colleagues, ",
+    "descriptionHomePart3": "it guides you to the best snacks, restaurants, attractions, pools, hotels, and tourist sites, with real-time information!",
+    "category": {
+      "catering": "Catering",
+      "hotelsAndAccommodations": "Hotels and Accommodations",
+      "entertainment": "Entertainment",
+      "touristAttractions": "Tourist Attractions",
+      "fashionAndBeauty": "Fashion and Beauty",
+      "transportation": "Transportation",
+      "businesses": "Businesses",
+      "sports": "Sports",
+      "emergencyServices": "Emergency Services",
+      "administrations": "Administrations"
+    }
+  },
+  "footer": {
+    "about": "About",
+    "descriptionFooter": "Discover our services and our commitment to providing an exceptional user experience.",
+    "usefulLinks": "Useful Links",
+    "contactUs": "Contact Us",
+    "FAQ": "FAQ",
+    "termsAndConditions": "Terms and Conditions",
+    "followUs": "Follow Us",
+    "sendUsAnEmail": "Send Us an Email",
+    "tellUs": "Tell us ...",
+    "send": "Send",
+    "copyRigth": "© 2025 Enjoy. All rights reserved."
+  }
 }
