--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -1,7 +1,8 @@
 {
   "english": "Anglais",
   "french": "Francais",
-  "login": "Connexion",
+  "login": "Se connecter",
+  "register": "S'inscrire",
   "name": "Nom",
   "first_name": "Prénom",
   "middle_name": "Deuxième Prénom",
@@ -25,5 +26,90 @@
   "statut": "Statut",
   "cancel": "Annuler",
   "services": "Services",
-  "info": "Infos"
+  "info": "Infos",
+    "navbar":{
+      "space": "Emplacement actuel",
+      "yelpProfessional": "Yelp pour les professionnels",
+      "writeReview": "Ecrire un avis",
+      "startProject": "Commence le projet",
+      "yelpExploreBusiness": "Explorez Yelp pour votre Business",
+      "descriptionStarPart1": "Entrez en conctact avec les meilleurs",
+      "descriptionStartPart2": "endroits pres de chez vous",
+      "descriptionEndPart1": "Vennez decouvrir",
+      "descriptionEndPart2": "les endroits que vous souhaitez",
+      "otherCategory": "Plus",
+      "serviceRepaire": "Service auto",
+      "homeAndWork": "Maison et travaux",
+      "restaurants": "Restaurants",
+      "restaurant": "Restaurant",
+      "delivery": "Livraison",
+      "takeAway": "À emporter",
+      "accountants": "Comptables",
+      "plumbers": "Plumbers",
+      "autoRepair": "Reparation auto",
+      "cameroon": "Cameroun",
+      "burgers": "Burgers",
+      "chineseCuisine": "Cuisine chinoise",
+      "italianCuisine": "Cuisine Italienne",
+      "reservations": "Reservations",
+      "mexicanCuisine": "Cuisine mexicaine",
+      "thaiCuisine": "Cuisine Thai",
+      "serviceProvider": "Prestataire",
+      "electricians": "Électriciens",
+      "cleaning": "Ménage",
+      "heating": "Chauffage",
+      "landscaping": "Aménagement paysager",
+      "locksmiths": "Serruriers",
+      "movers": "Déménageurs",
+      "carRepair": "Réparation auto",
+      "precisionCarCleaning": "Nettoyage auto de précision",
+      "bodywork": "Carrosserie",
+      "carCleaning": "Nettoyage de voiture",
+      "carDealership": "Concessionnaire auto",
+      "oilChange": "Vidange d'huile",
+      "parking": "Parking",
+      "towing": "Remorquage",
+      "dryCleaning": "Nettoyage à sec",
+      "phoneRepair": "Réparation des téléphones",
+      "bars": "Bars",
+      "nightlife": "Vie nocturne",
+      "hairdressersHairSalons": "Coiffeurs & salons de coiffure",
+      "gym": "Salle de sport",
+      "massage": "Massage",
+      "shopping": "Shopping",
+      "addABusiness": "Ajouter un commerce",
+      "claimYourBusiness": "Revendiquez votre entreprise",
+      "loginInToBusiness": "Connectez-vous à votre entreprise"
+    },
+    "home":{
+      "descriptionHomePart1": "Découvrez des bons plans et amusez-vous sans effort.",
+      "descriptionHomePart2": "Que vous voyagiez seul, en famille, entre amis ou avec des collègues, ",
+      "descriptionHomePart3": "vous guide vers les meilleurs snacks, restaurants, attractions, piscines, hôtels et sites touristiques, avec des informations en temps réel !",
+      "category": {
+        "catering": "Restauration",
+        "hotelsAndAccommodations": "Hôtels Et Hébergements",
+        "entertainment": "Divertissements",
+        "touristAttractions": "Sites Touristiques",
+        "fashionAndBeauty": "Modes et Beauté",
+        "transportation": "Transports",
+        "businesses": "Commerces",
+        "sports": "Sports",
+        "emergencyServices": "Secours",
+        "administrations": "Administrations"
+      }
+    },
+    "footer":{
+      "about": "À Propos",
+      "descriptionFooter": "Découvrez nos services et notre engagement à fournir une expérience utilisateur exceptionnelle.",
+      "usefulLinks": "Liens Utiles",
+      "contactUs": "Contactez-nous",
+      "FAQ": "FAQ",
+      "termsAndConditions": "Conditions Générales",
+      "followUs": "Suivez-nous",
+      "sendUsAnEmail": "Envoyez-nous un mail",
+      "tellUs": "Dites nous ...",
+      "send": "Envoyer",
+      "copyRigth": "© 2025 Enjoy. Tous droits réservés."
+  }
+ 
 }
