nav , home and search view for presentation

--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -1,21 +1,21 @@
 {
   "english": "Anglais",
-  "french": "Francais",
-  "login": "Se connecter",
+  "french": "Français",
+  "login": "Connexion",
   "register": "S'inscrire",
   "name": "Nom",
   "first_name": "Prénom",
-  "middle_name": "Deuxième Prénom",
-  "last_name": "Nom de Famille",
-  "id": "Identifiant",
+  "middle_name": "Deuxième prénom",
+  "last_name": "Nom de famille",
+  "id": "ID",
   "status": "Statut",
   "gender": "Genre",
-  "birthday": "Date de Naissance",
-  "currentAge": "Âge Actuel",
+  "birthday": "Date de naissance",
+  "currentAge": "Âge actuel",
   "phone": "Téléphone",
-  "email": "Email",
+  "email": "E-mail",
   "city": "Ville",
-  "zip": "Code Postal",
+  "zip": "Code postal",
   "country": "Pays",
   "address": "Adresse",
   "edit": "Modifier",
@@ -27,89 +27,184 @@
   "cancel": "Annuler",
   "services": "Services",
   "info": "Infos",
-    "navbar":{
-      "space": "Emplacement actuel",
-      "yelpProfessional": "Yelp pour les professionnels",
-      "writeReview": "Ecrire un avis",
-      "startProject": "Commence le projet",
-      "yelpExploreBusiness": "Explorez Yelp pour votre Business",
-      "descriptionStarPart1": "Entrez en conctact avec les meilleurs",
-      "descriptionStartPart2": "endroits pres de chez vous",
-      "descriptionEndPart1": "Vennez decouvrir",
-      "descriptionEndPart2": "les endroits que vous souhaitez",
-      "otherCategory": "Plus",
-      "serviceRepaire": "Service auto",
-      "homeAndWork": "Maison et travaux",
-      "restaurants": "Restaurants",
-      "restaurant": "Restaurant",
-      "delivery": "Livraison",
-      "takeAway": "À emporter",
-      "accountants": "Comptables",
-      "plumbers": "Plumbers",
-      "autoRepair": "Reparation auto",
-      "cameroon": "Cameroun",
-      "burgers": "Burgers",
-      "chineseCuisine": "Cuisine chinoise",
-      "italianCuisine": "Cuisine Italienne",
-      "reservations": "Reservations",
-      "mexicanCuisine": "Cuisine mexicaine",
-      "thaiCuisine": "Cuisine Thai",
-      "serviceProvider": "Prestataire",
-      "electricians": "Électriciens",
-      "cleaning": "Ménage",
-      "heating": "Chauffage",
-      "landscaping": "Aménagement paysager",
-      "locksmiths": "Serruriers",
-      "movers": "Déménageurs",
-      "carRepair": "Réparation auto",
-      "precisionCarCleaning": "Nettoyage auto de précision",
-      "bodywork": "Carrosserie",
-      "carCleaning": "Nettoyage de voiture",
-      "carDealership": "Concessionnaire auto",
-      "oilChange": "Vidange d'huile",
-      "parking": "Parking",
-      "towing": "Remorquage",
-      "dryCleaning": "Nettoyage à sec",
-      "phoneRepair": "Réparation des téléphones",
-      "bars": "Bars",
-      "nightlife": "Vie nocturne",
-      "hairdressersHairSalons": "Coiffeurs & salons de coiffure",
-      "gym": "Salle de sport",
-      "massage": "Massage",
-      "shopping": "Shopping",
-      "addABusiness": "Ajouter un commerce",
-      "claimYourBusiness": "Revendiquez votre entreprise",
-      "loginInToBusiness": "Connectez-vous à votre entreprise"
-    },
-    "home":{
-      "descriptionHomePart1": "Découvrez des bons plans et amusez-vous sans effort.",
-      "descriptionHomePart2": "Que vous voyagiez seul, en famille, entre amis ou avec des collègues, ",
-      "descriptionHomePart3": "vous guide vers les meilleurs snacks, restaurants, attractions, piscines, hôtels et sites touristiques, avec des informations en temps réel !",
-      "category": {
-        "catering": "Restauration",
-        "hotelsAndAccommodations": "Hôtels Et Hébergements",
-        "entertainment": "Divertissements",
-        "touristAttractions": "Sites Touristiques",
-        "fashionAndBeauty": "Modes et Beauté",
-        "transportation": "Transports",
-        "businesses": "Commerces",
-        "sports": "Sports",
-        "emergencyServices": "Secours",
-        "administrations": "Administrations"
-      }
-    },
-    "footer":{
-      "about": "À Propos",
-      "descriptionFooter": "Découvrez nos services et notre engagement à fournir une expérience utilisateur exceptionnelle.",
-      "usefulLinks": "Liens Utiles",
-      "contactUs": "Contactez-nous",
-      "FAQ": "FAQ",
-      "termsAndConditions": "Conditions Générales",
-      "followUs": "Suivez-nous",
-      "sendUsAnEmail": "Envoyez-nous un mail",
-      "tellUs": "Dites nous ...",
-      "send": "Envoyer",
-      "copyRigth": "© 2025 Enjoy. Tous droits réservés."
-  }
- 
+  "Plus": "Plus",
+  "Moins": "Moins",
+  
+  "navbar": {
+    "space": "Emplacement actuel",
+    "yelpProfessional": "Yelp pour les professionnels",
+    "writeReview": "Écrire un avis",
+    "startProject": "Commencer le projet",
+    "yelpExploreBusiness": "Explorez Yelp pour votre entreprise",
+    "descriptionStartPart1": "Entrez en contact avec les meilleurs",
+    "descriptionStartPart2": "endroits près de chez vous",
+    "descriptionEndPart1": "Venez découvrir",
+    "descriptionEndPart2": "les endroits que vous souhaitez",
+    "otherCategory": "Plus",
+    "serviceRepaire": "Service auto",
+    "homeAndWork": "Maison et travaux",
+    "restaurants": "Restaurants",
+    "restaurant": "Restaurant",
+    "delivery": "Livraison",
+    "takeAway": "À emporter",
+    "accountants": "Comptables",
+    "plumbers": "Plombiers",
+    "autoRepair": "Réparation auto",
+    "cameroon": "Cameroun",
+    "burgers": "Burgers",
+    "chineseCuisine": "Cuisine chinoise",
+    "italianCuisine": "Cuisine italienne",
+    "reservations": "Réservations",
+    "mexicanCuisine": "Cuisine mexicaine",
+    "thaiCuisine": "Cuisine thaïlandaise",
+    "serviceProvider": "Prestataire de services",
+    "electricians": "Électriciens",
+    "cleaning": "Ménage",
+    "heating": "Chauffage",
+    "landscaping": "Aménagement paysager",
+    "locksmiths": "Serruriers",
+    "movers": "Déménageurs",
+    "carRepair": "Réparation automobile",
+    "precisionCarCleaning": "Nettoyage automobile de précision",
+    "bodywork": "Carrosserie",
+    "carCleaning": "Nettoyage de voiture",
+    "carDealership": "Concessionnaire automobile",
+    "oilChange": "Vidange d'huile",
+    "parking": "Parking",
+    "towing": "Remorquage",
+    "dryCleaning": "Nettoyage à sec",
+    "phoneRepair": "Réparation de téléphones",
+    "bars": "Bars",
+    "nightlife": "Vie nocturne",
+    "hairdressersHairSalons": "Coiffeurs & salons de coiffure",
+    "gym": "Salle de sport",
+    "massage": "Massage",
+    "shopping": "Shopping",
+    "addABusiness": "Ajouter un commerce",
+    "claimYourBusiness": "Revendiquer votre entreprise",
+    "loginInToBusiness": "Connectez-vous à votre entreprise"
+  },
+  
+  "home": {
+    "descriptionHomePart1": "Découvrez des bons plans et amusez-vous sans effort.",
+    "descriptionHomePart2": "Que vous voyagiez seul, en famille, entre amis ou avec des collègues,",
+    "descriptionHomePart3": "vous guide vers les meilleurs snacks, restaurants, attractions, piscines, hôtels et sites touristiques, avec des informations en temps réel !",
+    "category": {
+      "catering": "Restauration",
+      "hotelsAndAccommodations": "Hôtels Et Hébergements",
+      "entertainment": "Divertissements",
+      "touristAttractions": "Sites Touristiques",
+      "fashionAndBeauty": "Modes et Beauté",
+      "transportation": "Transports",
+      "businesses": "Commerces",
+      "sports": "Sports",
+      "emergencyServices": "Secours",
+      "administrations": "Administrations"
+    }
+  },
+  
+  "footer": {
+    "about": "À propos",
+    "descriptionFooter": "Découvrez nos services et notre engagement à fournir une expérience utilisateur exceptionnelle.",
+    "usefulLinks": "Liens utiles",
+    "contactUs": "Contactez-nous",
+    "FAQ": "FAQ",
+    "termsAndConditions": "Conditions générales",
+    "followUs": "Suivez-nous",
+    "sendUsAnEmail": "Envoyez-nous un e-mail",
+    "tellUs": "Dites-nous ...",
+    "send": "Envoyer",
+    "copyRigth": "© 2025 Enjoy. Tous droits réservés."
+  },
+
+  "category": "Catégories",
+  "categories": {
+    "Restauration": "Restauration",
+    "Vie nocturne": "Vie nocturne",
+    "Shopping": "Shopping",
+    "Sports & Activités de loisirs": "Sports & activités de loisirs",
+    "Salons de beauté & Spas": "Salons de beauté & spas",
+    "Automobile": "Automobile",
+    "Maisons & Travaux": "Maisons & travaux",
+    "Alimentations": "Alimentations",
+    "Art & Loisirs": "Art & loisirs",
+    "Santé & Médical": "Santé & médical",
+    "Services destiné aux prof": "Services destinés aux professionnels",
+    "Animaux de companie": "Animaux de compagnie",
+    "Immobilier": "Immobilier",
+    "Hôtels & Séjours": "Hôtels & séjours",
+    "Services Locaux": "Services locaux",
+    "Organisation d événements": "Organisation d'événements",
+    "Services publics & gouvernement": "Services publics & gouvernement",
+    "Services financiers": "Services financiers",
+    "Formation & Enseignement": "Formation & enseignement",
+    "Organisation religieuse": "Organisation religieuse",
+    "Couleur locale": "Couleur locale",
+    "Média": "Média",
+    "Cafés & Thés": "Cafés & thés"
+  },
+  
+  "places": {
+    "Le Gourmet": {
+      "name": "Le Gourmet",
+      "description": "Restaurant gastronomique proposant des plats raffinés.",
+      "address": "Bastos, Yaoundé",
+      "phone": "+237690111222",
+      "email": "contact@legourmet.cm",
+      "opening_hours": {
+        "monday_friday": "12h00 - 23h00",
+        "saturday": "14h00 - 00h00",
+        "sunday": "Fermé"
+      },
+      "min_price": "10 000 FCFA"
+    }
+  },
+  
+  "price": "Prix",
+  "filter": "Filtres",
+  "suggested": "Suggéré",
+  "categorie": "Catégorie",
+  "feature": "Caractéristiques",
+  "see": "Voir tout",
+  "open_now": "Ouvert maintenant",
+  "offers_delivery": "Livraison disponible",
+  "offers_takeout": "À emporter disponible",
+  "good_for_dinner": "Bon pour le dîner",
+  "outdoor_seating": "Terrasse extérieure",
+  "good_for_lunch": "Bon pour le déjeuner",
+  "burgers": "Burgers",
+  "hot_dogs": "Hot-dogs",
+  "fast_food": "Restauration rapide",
+  "american": "Américain",
+  "food_trucks": "Camions de nourriture",
+  "diners": "Diners",
+  "salad": "Salade",
+  "restaurants": "Restaurants",
+  "food_delivery_services": "Services de livraison de nourriture",
+  "beer_bar": "Bar à bières",
+  "vegan": "Végétalien",
+  "sandwiches": "Sandwiches",
+  "sports_bars": "Bars sportifs",
+  "food_stands": "Stands de nourriture",
+  "pubs": "Pubs",
+  "fish_and_chips": "Poisson-frites",
+  "halal": "Halal",
+  "breakfast_and_brunch": "Petit déjeuner et brunch",
+  "vegetarian": "Végétarien",
+  "pizza": "Pizza",
+  "international": "International",
+  "cocktail_bars": "Bars à cocktails",
+  "chicken_shops": "Magasins de poulet",
+  "bars": "Bars",
+  "food": "Nourriture",
+  "steakhouses": "Steakhouses",
+  "modern_european": "Européen moderne",
+  "falafel": "Falafel",
+  "good_for_kids": "Bon pour les enfants",
+  "good_for_groups": "Bon pour les groupes",
+  "dogs_allowed": "Chiens autorisés",
+  "full_bar": "Bar complet",
+  "good_for_brunch": "Bon pour le brunch",
+  "takes_reservations": "Prend des réservations",
+  "les_meilleurs_burgers": "Les meilleurs burgers"
 }
