--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -116,7 +116,9 @@
     "full_bar": "Full Bar",
     "good_for_brunch": "Good for Brunch",
     "takes_reservations": "Take Reservations",
-    "les_meilleurs_burgers":"The Best Burgers"
+    "les_meilleurs_burgers":"The Best Burgers",
+    "trie":"Sort",
+    "recommand":"Recommended"
   
   
     
