--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -116,7 +116,9 @@
     "full_bar": "Bar complet",
     "good_for_brunch": "Bon pour le brunch",
     "takes_reservations": "Accepte les réservations",
-    "les_meilleurs_burgers":"Les Meilleurs Burgers"
+    "les_meilleurs_burgers":"Les Meilleurs Burgers",
+    "trie":"Trie",
+    "recommand":"Recommendé"
  
   
   
