--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -32,7 +32,7 @@
   
   "navbar": {
     "space": "Current Location",
-    "yelpProfessional": "Yelp for Professionals",
+    "yelpProfessional": "Enjoy for Professionals",
     "writeReview": "Write a Review",
     "startProject": "Start the Project",
     "yelpExploreBusiness": "Explore Yelp for Your Business",
