--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -32,7 +32,7 @@
   
   "navbar": {
     "space": "Emplacement actuel",
-    "yelpProfessional": "Yelp pour les professionnels",
+    "yelpProfessional": "Enjoy pour les professionnels",
     "writeReview": "Écrire un avis",
     "startProject": "Commencer le projet",
     "yelpExploreBusiness": "Explorez Yelp pour votre entreprise",
