--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -35,7 +35,7 @@
     "yelpProfessional": "Enjoy for Professionals",
     "writeReview": "Write a Review",
     "startProject": "Start the Project",
-    "yelpExploreBusiness": "Explore Yelp for Your Business",
+    "yelpExploreBusiness": "Explore Enjoy for Your Business",
     "descriptionStartPart1": "Get in touch with the best",
     "descriptionStartPart2": "places near you",
     "descriptionEndPart1": "Come discover",
