--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -35,7 +35,7 @@
     "yelpProfessional": "Enjoy pour les professionnels",
     "writeReview": "Écrire un avis",
     "startProject": "Commencer le projet",
-    "yelpExploreBusiness": "Explorez Yelp pour votre entreprise",
+    "yelpExploreBusiness": "Explorez Enjoy pour votre entreprise",
     "descriptionStartPart1": "Entrez en contact avec les meilleurs",
     "descriptionStartPart2": "endroits près de chez vous",
     "descriptionEndPart1": "Venez découvrir",
