--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -206,5 +206,37 @@
   "full_bar": "Full Bar",
   "good_for_brunch": "Good for Brunch",
   "takes_reservations": "Takes Reservations",
-  "les_meilleurs_burgers": "The Best Burgers"
+  "les_meilleurs_burgers": "The Best Burgers",
+  "recommand":"Recommanded",
+  "trie": "Sort",
+  "welcome":"Welcome Back",
+  "or":"OR",
+  "login_with_google": "Continue With Google",
+  "login_with_apple": "Log in With Apple",
+  "dont_have_an_account": "Don't have an account ?",
+  "claim_your_business_on_enjoy":"Claim your business on enjoy",
+  "monday" : "Monday",
+  "tuesday" : "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "sunday": "Sunday",
+  "adresse_1": "Address 1",
+  "adresse_2": "Address 2",
+  "ville": "City",
+  "code": "Postal Code",
+  "telephone": "Telephone",
+  "adresse_web": "Web Adress",
+  "horaires": "Schedules",
+  "adress_email": "Your Email Address",
+  "ajouter":"Add",
+  "ajouter_commerce": "Add Business",
+  "form": "Information Form",
+  "forgot_password": "Forgot your password ?",
+  "by_continuing_you_agree_to_Enjoy":" By continuing , you agree to Enjoy",
+  "Terms_of_Service": "Terms of Service",	
+  "and_acknowledge_our":"and acknowledge our",
+  "Privacy_Policy": "Privacy Policy"
+
 }
