--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -206,5 +206,36 @@
   "full_bar": "Bar complet",
   "good_for_brunch": "Bon pour le brunch",
   "takes_reservations": "Prend des réservations",
-  "les_meilleurs_burgers": "Les meilleurs burgers"
+  "les_meilleurs_burgers": "Les meilleurs burgers",
+  "recommand":"Recommandé",
+  "trie": "Trié",
+  "monday": "Lundi",
+  "tuesday": "Mardi",
+  "wednesday": "Mercredi",
+  "thursday": "Jeudi",
+  "friday": "Vendredi",
+  "saturday": "Samedi",
+  "sunday": "Dimanche",
+  "adresse_1": "Addresse 1",
+  "adresse_2": "Addresse 2",
+  "ville": "Ville",
+  "code": "Code Postal",
+  "telephone": "Téléphone",
+  "adresse_web": "Adresse Web",
+  "horaires": "Horaires",
+  "adress_email": "Votre Adresse Email",
+  "ajouter":"Add",
+  "ajouter_commerce": "Ajouter Commerce",
+  "form": "Formulaire d'Informations",
+  "welcome":"Content de vous revoir",
+  "or":"Ou",
+  "login_with_google": "Continuer avec Google",
+  "login_with_apple": "Connectez-vous avec Apple",
+  "dont_have_an_account": "Vous n'avez pas de compte ?",
+  "claim_your_business_on_enjoy":"Revendiquez votre entreprise sur Enjoy",
+  "forgot_password": "Vous avez oublié votre mot de passe ?",
+  "by_continuing_you_agree_to_Enjoy":" En continuant, vous acceptez Enjoy",
+  "Terms_of_Service": "Des Conditions d'Utilisation",	
+  "and_acknowledge_our":"et reconnaissez notre",
+  "Privacy_Policy": "Politique de Confidentialité."
 }
