dropdown customize complete

--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -80,7 +80,7 @@
     "gym": "Gym",
     "massage": "Massage",
     "shopping": "Shopping",
-    "addABusiness": "Add a Business",
+    "addABusiness": "Add a Businessssssssssssssssssssssssssssssssssssssssss",
     "claimYourBusiness": "Claim Your Business",
     "loginInToBusiness": "Log in to Your Business"
   },
