--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -80,7 +80,7 @@
     "gym": "Salle de sport",
     "massage": "Massage",
     "shopping": "Shopping",
-    "addABusiness": "Ajouter un commerce",
+    "addABusiness": "Ajouter un commerceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
     "claimYourBusiness": "Revendiquer votre entreprise",
     "loginInToBusiness": "Connectez-vous à votre entreprise"
   },
