agenvcy finalize after presentation

--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -252,8 +252,10 @@
         "from": "From",
         "to": "To",
         "departure": "Departure",
+        "return": "Return",
         "passengers": "Passengers",
-        "oneAdult": "1 adult",
+        "oneAdult": " Adult(s)",
+        "children": "Children(s)",
         "search": "Search",
         "today": "Today"
     }
