--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -285,7 +285,13 @@
         "oneAdult": " Adulte(s)",
         "children": "Enfant(s)",
         "search": "Chercher",
-        "today": "Aujourd’hui"
+        "today": "Aujourd’hui",
+        "hotel": {
+          "hotelAnnouncement": "Effectuez votre réservation maintenant et réglez à l'hôtel. L'annulation est gratuite.",
+          "arrival": "Arrival",
+          "departure": "Depart",
+          "travelers": "Voyageurs"
+        }
     }
   }
 }
