--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -139,7 +139,7 @@
     "Services financiers": "Financial Services",
     "Formation & Enseignement": "Training & Teaching",
     "Organisation religieuse": "Religious Organization",
-    "Couleur locale": "Local Color",
+    "Voyage": "Travel",
     "Média": "Media",
     "Cafés & Thés": "Coffees & Teas"
   },
