--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -139,7 +139,7 @@
     "Services financiers": "Services financiers",
     "Formation & Enseignement": "Formation & enseignement",
     "Organisation religieuse": "Organisation religieuse",
-    "Couleur locale": "Couleur locale",
+    "Voyage": "Voyage",
     "Média": "Média",
     "Cafés & Thés": "Cafés & thés"
   },
